[package]
name = "laggy"
description = "Laggy measures network latency and jitter between the source and AWS Cloud regions."
license = "Apache-2.0"
version = "2025.10.21"
edition = "2024"
homepage = "https://4n6ir.com"
repository = "https://github.com/jblukach/laggy"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }

[profile.release]
strip = true