[package]
name = "laggy"
description = "Laggy measures real-world network latency and jitter from the source location to AWS regions using API Gateway endpoints over IPv4 and IPv6."
license = "Apache-2.0"
version = "2025.10.22"
edition = "2024"
homepage = "https://4n6ir.com"
repository = "https://github.com/jblukach/laggy"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }

[profile.release]
strip = true